# quick_char_lang

./: CMakeLists.txt  LICENSE  README.md  test.ccl
examples/: Fibonacci.ccl  HelloWorld.ccl
examples/no_whitespace/: Fibonacci.ccl  HelloWorld.ccl
include/: BracketStack.h  DataTypes.h  InstructionStack.h  Interpreter.h  Parser.h  ProcedureStack.h  ReadBuffer.h  Runtime.h  ShortStack.h  ShowStack.h  VMState.h  chardict.h  garbagecollector.h  heapobjects.h  keyinfo.h  linkedlist.h  panic.h  readchar.h  stringio.h
src/datatypes/: BracketStack.c  DataTypes.c  InstructionStack.c  ProcedureStack.c  ReadBuffer.c  ShortStack.c
src/internals/: README.md  garbagecollector.c  linkedlist.c  panic.c  readchar.c  stringio.c
src/internals/data_structures/: chardict.c
src/internals/heap/: garbagecollector.c  heapobjects.c
src/internals/io/: keyinfo.c
src/interpreter/: Interpreter.c  Parser.c  Runtime.c  ShowStack.c  VMState.c  main.c
